gvb_interp/src/snapshots/gvb_interp__vm__tests__expr__sys_func__sgn.snap
---
source: gvb_interp/src/vm.rs
expression: "run(r#\"\n10 print sgn(1247); sgn(0); sgn(-12479.14)\n    \"#.trim(),\n    vec![(ExecResult :: End, None)])"

---
print "1"
print "0"
print "-1"
print newline
flush

