gvb_interp/src/snapshots/gvb_interp__vm__tests__expr__sys_func__tan.snap
---
source: gvb_interp/src/vm.rs
expression: "run(r#\"\n10 print tan(0); tan(1); tan(-1); tan(atn(1)*2);\n    \"#.trim(),\n    vec![(ExecResult :: End, None)])"

---
print "0"
print "1.55740772"
print "-1.55740772"
print "1.63312394E+16"
flush

